--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mon portfolio</title>
 </head>
 <body>
+     <header>
+        <nav>
+            <ul>
+                <li><a href="==index.htlm">Accueil</a></li>
+                <li><a href="==index.htlm">Document</a></li>
+                <li><a href="==index.htlm">Extrat</a></li>
+                </li>
     
 </body>
 </html>
+
