--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon portfolio</title>
+    <title>Mon portfolio - Accueil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <header>
+    <header>
         <nav>
             <ul>
-                <li><a href="==index.htlm">Accueil</a></li>
-                <li><a href="==index.htlm">Document</a></li>
-                <li><a href="==index.htlm">Extrat</a></li>
-                </li>
-    
+                <li><a href="index.html" class="active">Accueil</a></li>
+                <li><a href="about.html">À propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h1>Bienvenue sur mon portfolio</h1>
+            <p>Je suis Abaleyty, développeur passionné. Découvrez mes projets et contactez-moi !</p>
+            <a href="about.html" class="btn">Voir mes projets</a>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Mon Site Web. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
-
-
-             
