--- a/À propos.html
+++ b/À propos.html
@@ -19,7 +19,7 @@
 
     <main>
         <h1>À propos de moi</h1>
-        <p>Je m'appelle Abaleyty, développeur web basé à Calais. J'aime créer des interfaces modernes et intuitives.</p>
+        <p>Je m'appelle Abaleyty.</p>
 
         <section class="skills">
             <h2>Compétences</h2>
@@ -48,3 +48,4 @@
     </footer>
 </body>
 </html>
+
