--- a/À propos.html
+++ b/À propos.html
@@ -19,7 +19,7 @@
 
     <main>
         <h1>À propos de moi</h1>
-        <p>Je m'appelle Abaleyty.</p>
+        <p>Je m'appelle Abaleyty, développeur web basé à Calais. J'aime créer des interfaces modernes et intuitives.</p>
 
         <section class="skills">
             <h2>Compétences</h2>
@@ -34,7 +34,7 @@
             <h2>Mes projets</h2>
             <div class="project-card">
                 <h3>Jeu de mots en Python</h3>
-                <p>Un jeu interactif basé sur la logique et les indices.</p>
+                <p>Un jeu interactif basé sur la logique et les indices, développé en première année de licence informatique.</p>
             </div>
             <div class="project-card">
                 <h3>Site portfolio</h3>
@@ -48,4 +48,3 @@
     </footer>
 </body>
 </html>
-
