--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <section class="hero">
             <h1>Bienvenue sur mon portfolio</h1>
-            <p>Je suis Abaleyty, développeur passionné. Découvrez mes projets et contactez-moi !</p>
+            <p>Je suis Abaleyty, developpeur à mes heures perdues. Découvrez mes projets et contactez-moi !</p>
             <a href="about.html" class="btn">Voir mes projets</a>
         </section>
     </main>
