--- a/À propos.html
+++ b/À propos.html
@@ -20,6 +20,7 @@
     <main>
         <h1>À propos de moi</h1>
         <p>Je m'appelle Abaleyty, développeur web basé à Calais. J'aime créer des interfaces modernes et intuitives.</p>
+        <p>Vous pouvez aussi <a href="contact.html">me contacter ici</a> pour discuter d’un projet.</p>
 
         <section class="skills">
             <h2>Compétences</h2>
