--- a/À propos.html
+++ b/À propos.html
@@ -1,51 +1,104 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon portfolio - À propos</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mon portfolio - À propos</title>
+  <link rel="icon" href="images/icone-site.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html" class="active">À propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html" class="active">À propos</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <h1>À propos de moi</h1>
-        <p>Je m'appelle Abaleyty, développeur web basé à Calais. J'aime créer des interfaces modernes et intuitives.</p>
-        <p>Vous pouvez aussi <a href="contact.html">me contacter ici</a> pour discuter d’un projet.</p>
+  <main>
+    <section class="about-section">
+      <h1 class="section-title">À propos de moi</h1>
+      <div class="about-content">
+        <div class="about-text">
+          <p>Je m'appelle Abaleyty.J'aime créer des interfaces modernes et intuitives qui offrent une excellente expérience utilisateur.</p>
+          <p>Actuellement en formation, je consacre mon temps libre à perfectionner mes compétences et à travailler sur des projets personnels.</p>
+        </div>
+      </div>
+    </section>
 
-        <section class="skills">
-            <h2>Compétences</h2>
-            <ul>
-                <li>HTML / CSS / JavaScript</li>
-                <li>Python / Django</li>
-                <li>Git / GitHub</li>
-            </ul>
-        </section>
+    <section class="skills">
+      <h2 class="section-title">Mes Compétences</h2>
+      <ul class="skills-list">
+        <li class="skill-item">
+          <h3>HTML/CSS</h3>
+          <p>Création de sites web responsives et accessibles</p>
+        </li>
+        <li class="skill-item">
+          <h3>JavaScript</h3>
+          <p>Développement d'interactions dynamiques</p>
+        </li>
+        <li class="skill-item">
+          <h3>Python</h3>
+          <p>Scripts et applications backend</p>
+        </li>
+        <li class="skill-item">
+          <h3>Git & GitHub</h3>
+          <p>Gestion de versions et collaboration</p>
+        </li>
+      </ul>
+    </section>
 
-        <section class="projects">
-            <h2>Mes projets</h2>
-            <div class="project-card">
-                <h3>Jeu de mots en Python</h3>
-                <p>Un jeu interactif basé sur la logique et les indices, développé en première année de licence informatique.</p>
+    <section class="projects" id="projects">
+      <h2 class="section-title">Mes Projets</h2>
+      <div class="projects-grid">
+        <div class="project-card" id="python-game">
+          <div class="project-content">
+            <h3>Jeu de mots en Python (MOTUS)</h3>
+            <p>Un jeu interactif basé sur la logique et les indices, développé en première année de licence informatique.</p>
+            <div class="project-meta">
+              <span class="project-date">Développé en Septembre 2025</span>
+              <span class="project-tech">Python</span>
             </div>
-            <div class="project-card">
-                <h3>Site portfolio</h3>
-                <p>Ce site que vous explorez actuellement !</p>
+            <a href="#" class="project-link">Voir le code source →</a>
+          </div>
+        </div>
+        <div class="project-card" id="portfolio-site">
+          <div class="project-content">
+            <h3>Site portfolio</h3>
+            <p>Ce site que vous explorez actuellement ! Développé avec HTML5 et CSS3, il présente un design moderne et responsive.</p>
+            <div class="project-meta">
+              <span class="project-date">Développé en Septembre 2025</span>
+              <span class="project-tech">HTML5, CSS3</span>
             </div>
-        </section>
-    </main>
+            <a href="index.html" class="project-link">Explorer →</a>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-content">
+            <h3>Application de gestion</h3>
+            <p>Une application web de gestion de tâches développée avec Python et Flask, permettant de créer, modifier et suivre des projets.</p>
+            <div class="project-meta">
+              <span class="project-date">Développé en Janvier 2025</span>
+              <span class="project-tech">Python, Flask</span>
+            </div>
+            <a href="#" class="project-link">Découvrir →</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Mon Site Web. Tous droits réservés.</p>
-    </footer>
+  <footer>
+    <div class="footer-content">
+      <p>&copy; 2025 Mon Portfolio. Tous droits réservés.</p>
+      <div class="social-links">
+        <a href="#" class="social-link">GitHub</a>
+        <a href="#" class="social-link">LinkedIn</a>
+        <a href="#" class="social-link">Twitter</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
