--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mon portfolio - Accueil</title>
-  <link rel="icon" href="images/icone-site.png" type="image/png">
+  <link rel="icon" href="asset/icon/favicon.png" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
       <ul>
         <li><a href="index.html" class="active">Accueil</a></li>
         <li><a href="about.html">À propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -42,7 +43,6 @@
       </ul>
     </section>
 
-    <!-- NOUVELLE SECTION : Projets récents -->
     <section class="projects-preview">
       <h2 class="section-title">Projets Récents</h2>
       <div class="projects-grid">
@@ -71,9 +71,9 @@
     <div class="footer-content">
       <p>&copy; 2025 Mon Portfolio. Tous droits réservés.</p>
       <div class="social-links">
-        <a href="#" class="social-link">GitHub</a>
-        <a href="#" class="social-link">LinkedIn</a>
-        <a href="#" class="social-link">Twitter</a>
+        <a href="https://github.com" target="_blank" class="social-link">GitHub</a>
+        <a href="https://linkedin.com" target="_blank" class="social-link">LinkedIn</a>
+        <a href="https://twitter.com" target="_blank" class="social-link">Twitter</a>
       </div>
     </div>
   </footer>
