Revise À propos page content and links
Updated the portfolio page with new content and links.

--- a/À propos.html
+++ b/À propos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mon portfolio - À propos</title>
-  <link rel="icon" href="images/icone-site.png" type="image/png">
+  <link rel="icon" href="images/icone-portfolio.png" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="about.html" class="active">À propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -22,8 +23,9 @@
       <h1 class="section-title">À propos de moi</h1>
       <div class="about-content">
         <div class="about-text">
-          <p>Je m'appelle Abaleyty.J'aime créer des interfaces modernes et intuitives qui offrent une excellente expérience utilisateur.</p>
+          <p>Je m'appelle Abaleyty. J'aime créer des interfaces modernes et intuitives qui offrent une excellente expérience utilisateur.</p>
           <p>Actuellement en formation, je consacre mon temps libre à perfectionner mes compétences et à travailler sur des projets personnels.</p>
+          <p>Vous pouvez aussi <a href="contact.html" class="text-link">me contacter ici</a> pour discuter d'un projet.</p>
         </div>
       </div>
     </section>
@@ -61,7 +63,7 @@
               <span class="project-date">Développé en Septembre 2025</span>
               <span class="project-tech">Python</span>
             </div>
-            <a href="#" class="project-link">Voir le code source →</a>
+            <a href="https://github.com" target="_blank" class="project-link">Voir le code source →</a>
           </div>
         </div>
         <div class="project-card" id="portfolio-site">
@@ -83,7 +85,7 @@
               <span class="project-date">Développé en Janvier 2025</span>
               <span class="project-tech">Python, Flask</span>
             </div>
-            <a href="#" class="project-link">Découvrir →</a>
+            <a href="https://github.com" target="_blank" class="project-link">Découvrir →</a>
           </div>
         </div>
       </div>
@@ -94,9 +96,9 @@
     <div class="footer-content">
       <p>&copy; 2025 Mon Portfolio. Tous droits réservés.</p>
       <div class="social-links">
-        <a href="#" class="social-link">GitHub</a>
-        <a href="#" class="social-link">LinkedIn</a>
-        <a href="#" class="social-link">Twitter</a>
+        <a href="https://github.com" target="_blank" class="social-link">GitHub</a>
+        <a href="https://linkedin.com" target="_blank" class="social-link">LinkedIn</a>
+        <a href="https://twitter.com" target="_blank" class="social-link">Twitter</a>
       </div>
     </div>
   </footer>
