Fix HTML formatting and update content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul class="skills-list">
         <li class="skill-item">
           <h3>Frontend</h3>
-          <p>HTML, CSS, JavaScript</p>
+          <p>HTML, CSS</p>
         </li>
         <li class="skill-item">
           <h3>Backend</h3>
@@ -56,7 +56,7 @@
         <div class="project-card">
           <div class="project-content">
             <h3>Site portfolio</h3>
-            <p>Ce site que vous explorez actuellement ! Développé avec HTML5 et CSS3.</p>
+            <p>Ce site que vous explorez actuellement ! Développé avec HTML et CSS.</p>
             <a href="about.html#portfolio-site" class="project-link">Explorer →</a>
           </div>
         </div>
@@ -79,3 +79,4 @@
   </footer>
 </body>
 </html>
+
